<resources>
    <string name="app_name">Respyr App</string>
    <string name="terms_and_conditions"><u>Terms and Conditions</u></string>
    <string name="tap_here"><u>Tap Here</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="lifestyle">LifeStyle</string>
    <string name="todo">TODO</string>
    <string name="personal_info">Personal Info</string>
    <string name="bmi">BMI</string>
    <string name="medical_history">Medical History</string>
    <string name="this_is_used_to_get_accurate_health_status">This is used to get accurate health status</string>


    <!-- //// radio button options-->
    <string name="never">Never</string>
    <string name="occasionally">Occasionally</string>
    <string name="regularly">Regularly</string>
    <string name="lightly">lightly</string>
    <string name="moderately">Moderately</string>
    <string name="actively">Actively</string>
    <string name="very_actively">Very actively</string>
</resources>