<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".authentication.profile_creation.lifestyle.Water">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/user_profile_create_progress3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="12dp"
                android:paddingHorizontal="26dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:textAllCaps="true"
                        android:text="@string/lifestyle"
                        android:textColor="@color/primary"
                        android:textSize="15sp" />
                    <include layout="@layout/user_profile_dots"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="start"
                    android:includeFontPadding="false"
                    android:text="How much water do you consume daily?"
                    android:layout_marginTop="37.5dp"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/mulish"
                    android:gravity="start"
                    android:includeFontPadding="false"
                    android:textColor="@color/grey"
                    android:textSize="15sp"
                    android:text="@string/this_is_used_to_get_accurate_health_status"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="17dp">

                <ImageView
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:src="@drawable/water"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo"
                    android:layout_marginTop="60dp"
                    android:importantForAccessibility="no" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1 glass = 250 mL"
                    android:layout_gravity="center"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:layout_marginTop="37dp"
                    android:textColor="@color/darK_grey"
                    android:fontFamily="@font/mulish"
                    app:drawableStartCompat="@drawable/glass1" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:layout_marginTop="37dp"
                    android:paddingHorizontal="18dp"
                    android:layout_gravity="center"
                    android:background="@drawable/glass_button_bg">

                    <ImageButton
                        android:id="@+id/button_water_minus"
                        android:layout_width="wrap_content"
                        android:minWidth="60dp"
                        android:background="@color/transparent"
                        android:src="@drawable/minus"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/todo"
                        android:importantForAccessibility="no" />
                    <Space
                        android:layout_width="30dp"
                        android:layout_height="0dp"/>

                    <TextView
                        android:id="@+id/txt_water_glasses"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="106dp"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:text="4 glass (1L)"
                        android:includeFontPadding="false"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:drawableStartCompat="@drawable/glass3" />
                    <Space
                        android:layout_width="30dp"
                        android:layout_height="0dp"/>
                    <ImageButton
                        android:id="@+id/button_water_plus"
                        android:layout_width="wrap_content"
                        android:minWidth="60dp"
                        android:background="@color/transparent"
                        android:src="@drawable/add2"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/todo"
                        android:importantForAccessibility="no" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#E4F0FF"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/white"
        android:layout_height="91dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="start|center"
            android:layout_height="match_parent"
            android:paddingHorizontal="13dp">
            <Button
                android:id="@+id/button_back"
                android:layout_width="142dp"
                android:layout_height="61dp"
                android:includeFontPadding="false"
                android:text="@string/back"
                android:paddingHorizontal="22dp"
                android:drawableStart="@drawable/ic_back"
                android:drawableTint="@color/black"
                android:elevation="0dp"
                android:fontFamily="@font/mulish_semibold"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:background="@color/transparent"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/button_next"
                android:layout_width="142dp"
                android:layout_height="61dp"
                android:background="@drawable/button_small_1"
                android:drawableEnd="@drawable/ic_next"
                android:drawableTint="@color/white"
                android:elevation="0dp"
                android:fontFamily="@font/mulish_semibold"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:includeFontPadding="false"
                android:paddingHorizontal="22dp"
                android:text="@string/next"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>